# dashboard

./: .eslintrc.js  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  doppler.yaml  package-lock.json  package.json  pyproject.toml  start.sh  supervisord.conf  test.html  tsconfig.json
.github/actions/get-semantic-version/: action.yaml
.github/actions/push-docker-image/: action.yaml
.github/actions/update-helm/: action.yaml
.github/actions/update-python/: action.yaml
.github/actions/update-version/: action.yaml
.github/workflows/: deploy.yml  docker-image.yml  release.yml
api/backend/: app.py  command_queue.py  constants.py  host_manager.py  logging.py  models.py  utils.py
api/backend/command_worker/: worker.py
api/backend/configs/: commands.py  models.py  schema.py  utils.py
api/backend/database/: __init__.py  database_functions.py  startup.py
api/backend/integrations/: __init__.py  apps.py  integration.py
api/backend/routers/: command.py  config.py  host.py  integration.py
api/backend/systems/: arg.py  command.py  host.py  runner.py  utils.py
argocd/: argocd.yaml
charts/dashboard/: Chart.yaml  values.yaml
configs/: self.yml
docker/backend/: Dockerfile
docker/combined/: Dockerfile
docker/frontend/: Dockerfile
docs/: takeDocPhotos.ts  takeDocsPhotos.ts
docs/integrations/: jellyfin.yml  kuma.yml  qbittorrent.yml  radarr.yml
src/: constants.ts
src/app/: store.ts
src/lib/: types.ts  utils.ts
src/pages/: _app.tsx  _document.tsx  files.tsx  index.tsx
src/styles/: globals.css  themes.ts
(+158 files in other folders)
