[project]
name = "Dashboard"
version = ""
description = ""
authors = [{ name = "Jayden Pyles", email = "jpylesbuisness@gmail.com" }]
dependencies = [
    "uvicorn>=0.29.0",
    "fastapi>=0.111.0",
    "typing-extensions>=4.12.2",
    "paramiko>=3.4.1",
    "pymongo>=4.8.0",
    "motor>=3.5.1",
    "docker>=7.1.0",
    "uptime-kuma-api>=1.2.1",
    "qbittorrent-api>=2024.8.65",
    "aiohttp>=3.10.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["ipython>=8.26.0"]
[tool.pyright]
include = ["./api/backend/"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = []
defineConstant = { DEBUG = true }
stubPath = ""

reportMissingImports = true
reportMissingTypeStubs = false
reportAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportExplicitAny = false

pythonVersion = "3.9"
pythonPlatform = "Linux"


[tool.isort]
length_sort = "1"
profile = "black"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib = "STL"
import_heading_thirdparty = "PDM"
import_heading_firstparty = "LOCAL"
import_heading_localfolder = "LOCAL"
